packages/client/src/styles/components/auth-page.module.css
.form-container {
  display: flex;
  position: relative;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  width: 100%;
  height: 100%;
  background-repeat: no-repeat;
  background-attachment: fixed;
  background-size: cover;
  padding-top: 20px;
}

.form-container-register {
  background-image: url(../../../public/images/doge-universe.jpg);
}

.form-container-login {
  background-image: url(../../../public/images/dogemoon.png);
  align-items: flex-end;
  padding-right: 10%;
}

@media screen and (max-width: 1000px) {
  .form-container-login {
    align-items: center;
    padding-right: 0;
  }
}

.form-as-wrapper {
  max-width: 375px;
  width: 95vw;
  position: relative;
  display: block;
  min-height: 750px;
  padding-top: 30px;
  background-color: #2c2f33;
  box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
  margin-bottom: 50px;
}

.second-option-container {
  margin-top: 10px;
  position: absolute;
  bottom: 0px;
  width: 100%;
  padding-bottom: 10px;
  height: 20%;
  background-color: #373d41;
  color: white;
}

.wrapper-button {
  width: 100%;
  height: min-content;
  background: none;
  border: none;
  outline: none;
}

#facebook-button-wrapper {
  margin: 0px;
}

#facebook-button-wrapper {
  margin-top: 10px;
  margin-bottom: 10px;
}

.regular-input:focus,
.regular-input::placeholder {
  font-size: 17.5px;
  color: rgb(255, 255, 255);
}

.regular-input,
.regular-input::placeholder {
  color: rgb(196, 196, 196);
}

.regular-input:focus,
.regular-input {
  background-color: transparent;
  outline: none;
  transition: 0.3s;
}

.regular-input.regular-input-warning:focus,
.regular-input.regular-input-warning {
  background-color: transparent;
  border-bottom: 2px solid rgb(219, 0, 0) !important;
  outline: none;
  transition: 0.3s;
}

.form-padding-child {
  margin-right: 30px;
  margin-left: 30px;
}

.form-as-wrapper .input-data {
  height: 40px;
  position: relative;
  margin-top: 20px;
  margin-bottom: 40px;
  margin-right: 30px;
  margin-left: 30px;
}

.form-as-wrapper .input-data label {
  position: relative;
}

.regular-input {
  width: 100%;
  height: 100%;
  border: none;
  border-bottom: 2px solid rgb(80, 80, 80);
}

.form-submit-button {
  width: 70%;
  margin-top: 20px;
  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.6);
}

.form-tooltip {
  z-index: 100000;
}

.panels {
  width: 100vw;
  min-width: var(--min-width);
}

.d-flex {
  justify-content: center;
  align-items: center;
}

.form-heading {
  color: rgb(242, 243, 243);
  font-family: "Lato Bold";
  text-align: center;
  display: block;
  position: relative;
  margin-top: 5px;

  margin-bottom: 10px;
  font-size: calc(30px + min(5vw, 20px));
}

@media screen and (max-width: 260px) {
  .form-as-wrapper {
    min-height: 580px;
  }
  #register-form {
    min-height: 610px;
  }
  .form-padding-child {
    margin-right: 5px;
    margin-left: 5px;
  }
  .form-as-wrapper .input-data {
    margin-top: 20px;
    margin-bottom: 30px;
    margin-right: 10px;
    margin-left: 10px;
  }
}

.auth-label-icon {
  width: 23px;
  height: 23px;
  margin-right: 5px;
  margin-left: 5px;
}

